<resources>
    <string name="app_name">malba-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="total_cost_header">Total Fuel Cost</string>
    <string name="title_activity_add_log">Add New Fuel Log Entry</string>
    <string name="title_activity_edit_log">Edit Fuel Log Entry</string>
    <string name="date_heading">Date</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="station_heading">Fuel Station</string>
    <string name="station_hint">station</string>
    <string name="odometer_heading">Odometer Reading (km)</string>
    <string name="odometer_hint">up to 1 decimal place</string>
    <string name="grade_heading">Fuel Grade</string>
    <string name="grade_hint">grade</string>
    <string name="amount_heading">Fuel Amount (L)</string>
    <string name="amount_hint">up to 3 decimal places</string>
    <string name="unit_cost_heading">Fuel Cost (cents/L)</string>
    <string name="unit_cost_hint">up to 1 decimal place</string>
    <string name="button_edit_entry">Edit Log Entry</string>
    <string name="bad_data_warning">Uh oh! One or more of your fields isn\'t properly filled out.</string>
</resources>
